<resources>
    <string name="app_name">MyBridgertonBook</string>
    <string name="description">Description</string>
    <string-array name="data_title">
        <item>The Duke And I</item>
        <item>The Viscount Who Loved Me</item>
        <item>An Offer From A Gentleman</item>
        <item>Romancing Mister Bridgerton</item>
        <item>To Sir Phillip, With Love</item>
        <item>When He Was Wicked</item>
        <item>It\'s In His Kiss</item>
        <item>On The Way To The Wedding</item>
        <item>The Bridgertons: Happily Ever After</item>
        <item>Queen Charlotte</item>
        <item>Because Of Miss Bridgerton</item>
        <item>The Girl With The Make-Believe Husband</item>
        <item>The Other Miss Bridgerton</item>
        <item>First Comes Scandal</item>
    </string-array>
    <string name="authors">Author</string>
    <string name="author_name">Julia Quinn</string>
    <string name="publisher">Publisher</string>
    <string name="publisher_name">Avon</string>
    <string name="published">Published on</string>
    <string name="main_char">Main Characters</string>
    <string name="prev">Previous Book</string>
    <string name="next">Next Book</string>
</resources>